# cs2-demo-downloader

./: .gitignore  Pipfile  README.md  cache.json  client.py  downloader.py  main.py  match_scraper.py  pyproject.toml  settings.toml  wa.pickle
src/: client.py  match_scraper.py
src/cs2_demo_downloader/: client.py  downloader.py  match_scraper.py
